# accelerator-reinforcement-learning

accelerator-rl/: .gitignore  Makefile  README.md  pyproject.toml
accelerator-rl/.github/workflows/: ci.yml
accelerator-rl/configs/algorithms/: ppo.yaml  reinforce.yaml
accelerator-rl/configs/experiments/: steer_beam.yaml
accelerator-rl/configs/lattices/: diag0.yaml
accelerator-rl/configs/rewards/: centroid_target.yaml
accelerator-rl/scripts/: evaluate.py  explore_environment.py  generate_trajectories.py  train.py  visualize_beam.py
accelerator-rl/src/accelerator_rl/: __init__.py
accelerator-rl/src/accelerator_rl/agents/: policy_agent.py  random_agent.py
accelerator-rl/src/accelerator_rl/algorithms/: base.py  ppo.py  reinforce.py
accelerator-rl/src/accelerator_rl/analysis/: plots.py  sensitivity.py  trajectories.py
accelerator-rl/src/accelerator_rl/constraints/: action_clipping.py  beam_loss.py  magnet_limits.py
accelerator-rl/src/accelerator_rl/core/: MDP_elements.py  protocols.py  spaces.py  trajectory.py  transition.py
accelerator-rl/src/accelerator_rl/environments/: accelerator_env.py  action_transform.py  observation_builder.py  termination.py
accelerator-rl/src/accelerator_rl/models/: mlp.py  policy.py  value_function.py
accelerator-rl/src/accelerator_rl/rewards/: base.py  beam_size_reward.py  centroid_reward.py  composite_reward.py  (+1 more)
accelerator-rl/tests/integration/: test_accelerator_episode.py
accelerator-rl/tests/simulation/: test_cheetah_backend.py  test_lattice_loader.py
accelerator-rl/tests/unit/: test_action_transform.py
(+11 files in other folders)
